objects/LLC_BI__LLC_LoanDocument__c.object
<CustomObject>
    <fields>
        <fullName>CF_Category__c</fullName>
        <description>It stores category name</description>
        <formula>LLC_BI__docType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Document_Date__c</fullName>
        <description>It stores the date at which user uploaded the file.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Exception_Tracking_Status__c</fullName>
        <label>Exception Tracking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trailing Document</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Compliance to Review</fullName>
                </value>
                <value>
                    <fullName>Compliance Approved</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Corrected Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Date Required</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Expired Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Missing Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Notary Required</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Officer Comments</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Original Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Release Required</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Signature Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Name__c</fullName>
        <description>It will store the name of loan document</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Placeholder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EtranDocErrorMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SBA Error Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EtranDocStatus__c</fullName>
        <label>SBA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for eTran</fullName>
                </value>
                <value>
                    <fullName>Sent to eTran</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EtranDocumentTypeCode__c</fullName>
        <label>SBA Document Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>590</fullName>
                    <label>Signed SBA Form 912</label>
                </value>
                <value>
                    <fullName>700</fullName>
                    <label>T1 - SBA Form 1919 - Borrower&apos;s Information</label>
                </value>
                <value>
                    <fullName>702</fullName>
                    <label>T1 - SBA Form 1920 - Lender&apos;s Application</label>
                </value>
                <value>
                    <fullName>725</fullName>
                    <label>T2 – Lender’s Credit Memo</label>
                </value>
                <value>
                    <fullName>727</fullName>
                    <label>T2 - Debt Schedule documents</label>
                </value>
                <value>
                    <fullName>728</fullName>
                    <label>T2 - Schedule of Collateral</label>
                </value>
                <value>
                    <fullName>750</fullName>
                    <label>T3 - Loan Authorization</label>
                </value>
                <value>
                    <fullName>776</fullName>
                    <label>T4 - SBA Form 413 - Personal Financial Statements</label>
                </value>
                <value>
                    <fullName>778</fullName>
                    <label>T4 - Credit Bureau Report</label>
                </value>
                <value>
                    <fullName>783</fullName>
                    <label>T4 - SBA Form 912 - Statement of Personal History</label>
                </value>
                <value>
                    <fullName>800</fullName>
                    <label>T5 - Business Valuation</label>
                </value>
                <value>
                    <fullName>802</fullName>
                    <label>T5 - Refi Transcript of Account</label>
                </value>
                <value>
                    <fullName>803</fullName>
                    <label>T5 - List of all M being Purchased</label>
                </value>
                <value>
                    <fullName>806</fullName>
                    <label>T5 - Copies of Notes to be Refinanced</label>
                </value>
                <value>
                    <fullName>825</fullName>
                    <label>T6 - Current A/R and A/P</label>
                </value>
                <value>
                    <fullName>826</fullName>
                    <label>T6 - Business Financials</label>
                </value>
                <value>
                    <fullName>831</fullName>
                    <label>T6 - Business Forecast</label>
                </value>
                <value>
                    <fullName>852</fullName>
                    <label>T7 - Affiliate Tax Returns</label>
                </value>
                <value>
                    <fullName>875</fullName>
                    <label>T8 - Franchise Documents</label>
                </value>
                <value>
                    <fullName>876</fullName>
                    <label>T8 - Purchase Agreement (Business/Stock/Asset)</label>
                </value>
                <value>
                    <fullName>878</fullName>
                    <label>T8 - Purchase Agreement (Real Estate)</label>
                </value>
                <value>
                    <fullName>900</fullName>
                    <label>T9 - Real Estate Appraisal</label>
                </value>
                <value>
                    <fullName>901</fullName>
                    <label>T9 - Enviromental Investion Report</label>
                </value>
                <value>
                    <fullName>902</fullName>
                    <label>T9 - Lease Agreement</label>
                </value>
                <value>
                    <fullName>903</fullName>
                    <label>T9 - M Appraisal Documents</label>
                </value>
                <value>
                    <fullName>927</fullName>
                    <label>T10 - SBA Form 159 - Fee Disclosure and Compensation Form</label>
                </value>
                <value>
                    <fullName>929</fullName>
                    <label>T10 - CAIVRS Report</label>
                </value>
                <value>
                    <fullName>931</fullName>
                    <label>T10 - Documentation of Lawsuits / Judgements / Bankruptcy</label>
                </value>
                <value>
                    <fullName>933</fullName>
                    <label>T10 - Articles of Organization</label>
                </value>
                <value>
                    <fullName>944</fullName>
                    <label>T10 - Clearance Docs for Non-US Citizens</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length. This field is still respected, but users should start using the newer Placeholder Approval Roles field, which can accept more characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to approve the document. If left blank all roles can approve the document.</inlineHelpText>
        <label>Approval Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Esign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. This checkbox, when set to true, can be used to tell a downstream process that this e-signature ready placeholder should automatically appear in Customer Portal once available, rather than requiring a Document Manager user to manually trigger this process.</description>
        <label>Auto E-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Content_Management_Key__c</fullName>
        <description>During the document preparation process, the system populates this text field with a static value that uniquely identifies the document for content management purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Content Management Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Customer_Portal_Doc__c</fullName>
        <description>Deprecated</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Customer Portal Doc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Source__c</fullName>
        <description>The system populates this picklist to define the source of a document in Document Manager. By default, it is blank. This field is not visible to users.</description>
        <inlineHelpText>This system-populated field displays a document’s source.</inlineHelpText>
        <label>Document Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doc_Prep</fullName>
                    <label>Doc Prep</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Store_Index__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field populates automatically and associates placeholder records and document store records. It is where Notes and Attachments and Content are stored.</description>
        <label>Document Store Index</label>
        <referenceTo>LLC_BI__Document_Store_Index__c</referenceTo>
        <relationshipLabel>Loan Documents</relationshipLabel>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Download_As_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It should be marked to true if a compatible file should be downloaded as a PDF.</description>
        <inlineHelpText>Field should be marked to true if a compatible file should be downloaded as a PDF.</inlineHelpText>
        <label>Download As PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Due_Date_Time__c</fullName>
        <description>The system automatically populates this date/time field with the document due date and time. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field automatically displays the document due date and time.</inlineHelpText>
        <label>Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__E_Vault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to send the placeholder for e-vault. By default, it is false. This field only displays when the OneSpan or E-Signature plugin is active.</description>
        <inlineHelpText>Select this field to flag the e-vault placeholder as to-send.</inlineHelpText>
        <label>E-Vault Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Date_Time__c</fullName>
        <description>The system automatically populates this optional date/time field with the document exception date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field automatically displays the document exception date and time.</inlineHelpText>
        <label>Exception Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_File__c</fullName>
        <description>This field is not required but is automatically populated. The formula returns true if there is a document attached to the placeholder.</description>
        <formula>IF(ISBLANK(LLC_BI__Document_Store_Index__c) &amp;&amp; ISBLANK(LLC_BI__attachmentId__c),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is required. This field associates this record to a loan.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner__c</fullName>
        <description>This field is optional and only applies to classic Document Manager. This field can be used to set the document owner&apos;s role.</description>
        <label>ownerGroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Lender/Admin</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Groups__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the public groups added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on public groups. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Profiles to determine which users can access a document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder Viewer Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Profiles__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the user profiles added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on profiles. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Groups to determine which users can access a document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder Viewer Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Description__c</fullName>
        <description>This field is optional. This is the document description that is displayed to Customer Portal users.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Doc Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Name__c</fullName>
        <description>This field is optional. This is the document name that is displayed to Customer Portal users.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Type__c</fullName>
        <description>Deprecated</description>
        <label>-D Portal Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, this document will be displayed in Customer Portal.</description>
        <label>Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Date_Time__c</fullName>
        <description>The system automatically populates this optional date/time field when a user rejects a Customer Portal document.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field automatically displays the Customer Portal document rejection date and time.</inlineHelpText>
        <label>Portal Rejection Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Date__c</fullName>
        <description>This field is optional and automatically populates when a Customer Portal document is rejected. This field stores the most recent date that the Customer Portal originated document was rejected.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Reason__c</fullName>
        <description>This field is optional. This is the explanation text that is displayed to Customer Portal users when a document is rejected.</description>
        <label>Portal Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Wrong File</fullName>
                </value>
                <value>
                    <fullName>Unreadable</fullName>
                </value>
                <value>
                    <fullName>Out of Date</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Incorrect Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Upload_Date__c</fullName>
        <description>This field is optional and is automatically populated. This field stores the date that a user uploads a document to Customer Portal for the placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Uploaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and shows which user uploaded the file through Customer Portal in Document Manager.</description>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UploadedLoanDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional field. It is a lookup that links the Placeholder to a Requirement.</description>
        <label>Requirement</label>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>LLC LoanDocuments</relationshipLabel>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to preview and download a specific document. If left blank, all roles can view and download the document. This field is limited to 255 characters in length. This field is still respected, but users should start using the newer Placeholder Viewer Roles field, which can accept more characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to view the document. If blank all roles can view the document.</inlineHelpText>
        <label>Viewer Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__approvalDate__c</fullName>
        <description>This field is optional and represents a time stamp that lists the date/time that the document was approved.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__approvedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is a lookup to the user who approved the document.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__attachmentId__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Attachment Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__closingChecklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and automatically populates if the placeholder was created by a closing checklist record.  This field associates the closing checklist record used to create the placeholder.</description>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__comments__c</fullName>
        <description>This field retains the most recent comment on a placeholder in classic Document Manager. This field is not currently used in Document Manager.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__date__c</fullName>
        <description>This field is optional. The user can manually set this date on the Loan placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional.  If this LoanDocument record was created from a closing checklist, the name of this record auto-populates with the name of the LoanDocument.</description>
        <label>DocClass</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but an admin must populate it for the placeholder to appear in Document Manager. This field associates a placeholder with a specific DocManager record.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but an admin must populate it for the placeholder to appear under a tab in classic Document Manager. This field associates a placeholder with a specific DocTab record.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but auto-populates if the placeholder was created from a closing checklist record. This field is equivalent to a category name for groups of placeholder records.</description>
        <label>Category</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipName>LLC_LoanDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__dueDaysPrior__c</fullName>
        <description>--DEPRECATED-- This field is not currently used.</description>
        <label>-D Due Days Prior</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__exceptionDate__c</fullName>
        <description>This field is optional. This is the date when a document was or will be set to a status of Exception. This field auto-populates when a user changes the Status field to Exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__fileSize__c</fullName>
        <description>This field is optional and automatically populates when a file is uploaded. This field displays the file size of the uploaded file on the placeholder.</description>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__firstReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- This field is not currently used.</description>
        <label>-D First Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__helpText__c</fullName>
        <description>This field is optional. This field provides help text for a loan document placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Help Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__mimeType__c</fullName>
        <description>This field is optional and automatically populates when a file is uploaded. This field records the MIME type (file extension) of the file uploaded to a placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mime Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ownerObjectId__c</fullName>
        <description>This field is optional. This field can be used to define the ID of the user who owns the placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ownerObjectId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used internally. This is the parent placeholder for archived placeholders</description>
        <label>Parent</label>
        <referenceTo>LLC_BI__LLC_LoanDocument__c</referenceTo>
        <relationshipLabel>LLC_LoanDocuments</relationshipLabel>
        <relationshipName>children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__priority__c</fullName>
        <description>This field is optional. This picklist shows the priority of a specific placeholder. It can have values such as Critical, High, Medium, Low, or None.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewDate__c</fullName>
        <description>This field is optional. This is the date when a document was reviewed by a user. This field does not auto-populate when a user changes the Status field to Reviewed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewStatus__c</fullName>
        <description>This field is not required, but the user must populate it when in use. This field stores the status of a placeholder. A placeholder without an attachment can have a value of Open, Waived, or Exception. When a file is uploaded, it can have a value of Approved, Exception, Reviewed or Waived. A user can change these status values depending on their permissions.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>In-File</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Awaiting Review</fullName>
                </value>
                <value>
                    <fullName>E-Signature Needed</fullName>
                </value>
                <value>
                    <fullName>E-Signature Pending</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Ready to Tag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. This field displays the user who reviewed the document with their role.</description>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LLC_LoanDocuments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__sortOrder__c</fullName>
        <description>--DEPRECATED-- This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Sort</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__version__c</fullName>
        <description>This field is not currently used.</description>
        <label>Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>